src/test/ui/deprecation/suggestion.stderr
error: use of deprecated item 'Foo::deprecated': replaced by `replacement`
  --> $DIR/suggestion.rs:27:9
   |
LL |     foo.deprecated();
   |         ^^^^^^^^^^ If I were you, I would simply replace the use of the deprecated item: `replacement`
   |
note: lint level defined here
  --> $DIR/suggestion.rs:7:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to previous error

